--- a/anxiety.html
+++ b/anxiety.html
@@ -1,48 +1,111 @@
-<h1>Aniety/Panic Attacks</h1>
-<p>
-  Anxiety is <strong>not</strong> fiction. Anxiety is real. Panic is not made up. Owning, getting help to overcome, and learning to cope with your anxious feelings is critical to finally living your life and not simply existing.
-</p>
-<h2>Think you are having a panic attack? Here are the signs.</h2>
-<p>
+<!DOCTYPE html>
+<html lang="en">
 
-Abdominal cramping
-<br/>
-Chest pain
-<br/>
-Dizziness, lightheadedness, or faintness
-<br/>
-Fear of loss of control or death
-<br/>
-Feeling of unreality or detachment
-<br/>
-Nausea
-<br/>
-Rapid, pounding heart rate
-<br/>
-Sense of impending doom or danger
-<br/>
-Shortness of breath or tightness in your throat
-<br/>
-Sweating
-<br/>
-Trembling or shaking
-</p>
-<h2>Different Ways to End Your Panic Attack</h2>
-<p>
-  1. Learn your symptoms, and realize that you are having an anxiety attack
-  <br/>
-  2. Try technique called belly breathing → Exhale deeply, relax your shoulders, and focus on some longer, deeper inhales and exhales
-  <br/>
-  3. Physically force your body into relaxation positions, such as stretching or tightening your shoulders →  the more you can breathe deeply, the easier it will be to cope
-  <br/>
-  4. Try talking to yourself! Remind yourself out loud that the attack will end, and it won’t kill you. Reminding yourself of truths can counter your fears.
-  <br/>
-  5. De-isolate yourself! Get out of the house, but more importantly get out of your head. Go to the movies, to the gym, or volunteer.
-  <br/>
-  6. Get on a sleep schedule. Anxiety causes sleep problems and sleep deprivation causes anxiety. So while you are trying to calm your anxiousness, make a conscious effort to improve your sleep patterns. Go to bed and wake up the same time every day. In addition to irregular bedtimes, caffeine and bright lights can also cause sleepless nights.
-  <br/>
-  <br/>
-  If these methods are not working, or you experience panic attacks often, visit the health center to speak with a therapist that can help you understand the triggers and solutions to your attacks.
-</p>
-<a href="https://www.youtube.com/watch?v=V8wTyfKd-M0">Ways to Destress</a>
-<a href="https://www.youtube.com/watch?v=vXZ5l7G6T2I">Breathing Technique during Panic Attack</a>
+        <!--
+WRITTEN BY: Tyler Valdivieso
+EMAIL: valdivit@uci.edu
+-->
+
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href= "style.css" rel= "stylesheet" type= "text/css" >
+    <title>Healthful.info</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm sticky-top">
+    <ul class="navbar-nav">
+      <li class="nav-item navbar-brand">
+        <span class="navbar-brand">
+          <img src="healthful-logo%20copy.png" id="logo">
+        </span>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-auto" id="links">
+        <li class="nav-item active">
+        <a href="index.html" class="nav-link">
+          Emergency
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="tutorials.html" class="nav-link">
+          Tutorials
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          Research
+        </a>
+      </li>
+        <li class="nav-item">
+        <a href="about.html" class="nav-link">
+          About US
+        </a>
+      </li>
+    </ul>
+    </nav>
+
+    <div class="container">
+
+    <h1>Aniety/Panic Attacks</h1>
+    <p>
+      Anxiety is <strong>not</strong> fiction. Anxiety is real. Panic is not made up. Owning, getting help to overcome, and learning to cope with your anxious feelings is critical to finally living your life and not simply existing.
+    </p>
+    <h2>Think you are having a panic attack? Here are the signs.</h2>
+    <p>
+
+    Abdominal cramping
+    <br/>
+    Chest pain
+    <br/>
+    Dizziness, lightheadedness, or faintness
+    <br/>
+    Fear of loss of control or death
+    <br/>
+    Feeling of unreality or detachment
+    <br/>
+    Nausea
+    <br/>
+    Rapid, pounding heart rate
+    <br/>
+    Sense of impending doom or danger
+    <br/>
+    Shortness of breath or tightness in your throat
+    <br/>
+    Sweating
+    <br/>
+    Trembling or shaking
+    </p>
+    <h2>Different Ways to End Your Panic Attack</h2>
+    <p>
+      1. Learn your symptoms, and realize that you are having an anxiety attack
+      <br/>
+      2. Try technique called belly breathing → Exhale deeply, relax your shoulders, and focus on some longer, deeper inhales and exhales
+      <br/>
+      3. Physically force your body into relaxation positions, such as stretching or tightening your shoulders →  the more you can breathe deeply, the easier it will be to cope
+      <br/>
+      4. Try talking to yourself! Remind yourself out loud that the attack will end, and it won’t kill you. Reminding yourself of truths can counter your fears.
+      <br/>
+      5. De-isolate yourself! Get out of the house, but more importantly get out of your head. Go to the movies, to the gym, or volunteer.
+      <br/>
+      6. Get on a sleep schedule. Anxiety causes sleep problems and sleep deprivation causes anxiety. So while you are trying to calm your anxiousness, make a conscious effort to improve your sleep patterns. Go to bed and wake up the same time every day. In addition to irregular bedtimes, caffeine and bright lights can also cause sleepless nights.
+      <br/>
+      <br/>
+      If these methods are not working, or you experience panic attacks often, visit the health center to speak with a therapist that can help you understand the triggers and solutions to your attacks.
+    </p>
+    <a href="https://www.youtube.com/watch?v=V8wTyfKd-M0">Ways to Destress</a>
+    <a href="https://www.youtube.com/watch?v=vXZ5l7G6T2I">Breathing Technique during Panic Attack</a>
+
+
+    </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+</html>
