--- a/cpr.html
+++ b/cpr.html
@@ -1,30 +1,93 @@
-<h1>CPR</h1>
-<h2>Steps to properly perform hands only CPR (According to cpr.heart.org)</h2>
-<p>
-  1. Call 9-1-1 if possible
-  <br/>
-  2. Push hard and fast in the center of the chest
-</p>
-<h2>Before giving CPR steps (According to Red Cross):</h2>
-<p>
-  1. Check the scene and the person. Make sure the scene is safe, then tap the person on the shoulder and shout “Are you OK?” to ensure that the person needs help.
-  <br/>
-  2. Call 911 for assistance.
-  <br/>
-  3. Open the airway. With the person lying on his or her back, tilt the head back slightly to lift the chin.
-  <br/>
-  4. Check for breathing. Listen carefully, for no more than 10 seconds, for sounds of breathing. If there is no breathing begin CPR.
+<!DOCTYPE html>
+<html lang="en">
 
-</p>
-<h2>Steps to perform CPR properly (According to Red Cross):</h2>
-<p>
-  1. Push hard, push fast. Place your hands, one on top of the other, in the middle of the chest. Use your body weight to help you administer compressions that are at least 2 inches deep and delivered at a rate of at least 100 compressions per minute.
-  <br/>
-  2. Deliver rescue breaths. With the person's head tilted back slightly and the chin lifted, pinch the nose shut and place your mouth over the person's mouth to make a complete seal. Blow into the person's mouth to make the chest rise. Deliver two rescue breaths, then continue compressions.
-  <br/>
-  3. Continue CPR steps. Keep performing cycles of chest compressions and breathing until the person exhibits signs of life, such as breathing, an AED becomes available, or EMS or a trained medical responder arrives on scene.
-</p>
-<a href="https://www.youtube.com/watch?time_continue=1&v=a95DdvD9SsE">CPR Demonstration</a>
-<a href="https://cpr.heart.org/AHAECC/CPRAndECC/AboutCPRECC/WhatIsCPR/UCM_499896_What-is-CPR.jsp">What is CPR</a>
-<a href="https://www.redcross.org/take-a-class/cpr/performing-cpr/cpr-steps">CPR Steps</a>
-<a href="https://www.redcross.org/take-a-class/cpr?latitude=33.6461&longitude=-117.8425">CPR Certification  </a>
+        <!--
+WRITTEN BY: Tyler Valdivieso
+EMAIL: valdivit@uci.edu
+-->
+
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href= "style.css" rel= "stylesheet" type= "text/css" >
+    <title>Healthful.info</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm sticky-top">
+    <ul class="navbar-nav">
+      <li class="nav-item navbar-brand">
+        <span class="navbar-brand">
+          <img src="healthful-logo%20copy.png" id="logo">
+        </span>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-auto" id="links">
+        <li class="nav-item active">
+        <a href="index.html" class="nav-link">
+          Emergency
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="tutorials.html" class="nav-link">
+          Tutorials
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          Research
+        </a>
+      </li>
+        <li class="nav-item">
+        <a href="about.html" class="nav-link">
+          About US
+        </a>
+      </li>
+    </ul>
+    </nav>
+
+    <div class="container">
+
+    <h1>CPR</h1>
+    <h2>Steps to properly perform hands only CPR (According to cpr.heart.org)</h2>
+    <p>
+      1. Call 9-1-1 if possible
+      <br/>
+      2. Push hard and fast in the center of the chest
+    </p>
+    <h2>Before giving CPR steps (According to Red Cross):</h2>
+    <p>
+      1. Check the scene and the person. Make sure the scene is safe, then tap the person on the shoulder and shout “Are you OK?” to ensure that the person needs help.
+      <br/>
+      2. Call 911 for assistance.
+      <br/>
+      3. Open the airway. With the person lying on his or her back, tilt the head back slightly to lift the chin.
+      <br/>
+      4. Check for breathing. Listen carefully, for no more than 10 seconds, for sounds of breathing. If there is no breathing begin CPR.
+
+    </p>
+    <h2>Steps to perform CPR properly (According to Red Cross):</h2>
+    <p>
+      1. Push hard, push fast. Place your hands, one on top of the other, in the middle of the chest. Use your body weight to help you administer compressions that are at least 2 inches deep and delivered at a rate of at least 100 compressions per minute.
+      <br/>
+      2. Deliver rescue breaths. With the person's head tilted back slightly and the chin lifted, pinch the nose shut and place your mouth over the person's mouth to make a complete seal. Blow into the person's mouth to make the chest rise. Deliver two rescue breaths, then continue compressions.
+      <br/>
+      3. Continue CPR steps. Keep performing cycles of chest compressions and breathing until the person exhibits signs of life, such as breathing, an AED becomes available, or EMS or a trained medical responder arrives on scene.
+    </p>
+    <a href="https://www.youtube.com/watch?time_continue=1&v=a95DdvD9SsE">CPR Demonstration</a>
+    <a href="https://cpr.heart.org/AHAECC/CPRAndECC/AboutCPRECC/WhatIsCPR/UCM_499896_What-is-CPR.jsp">What is CPR</a>
+    <a href="https://www.redcross.org/take-a-class/cpr/performing-cpr/cpr-steps">CPR Steps</a>
+    <a href="https://www.redcross.org/take-a-class/cpr?latitude=33.6461&longitude=-117.8425">CPR Certification  </a>
+
+
+    </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+</html>
