--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ EMAIL: valdivit@uci.edu
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="tutorials.html" class="nav-link">
           Tutorials
         </a>
       </li>
@@ -40,7 +40,7 @@ EMAIL: valdivit@uci.edu
         </a>
       </li>
         <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="about.html" class="nav-link">
           About US
         </a>
       </li>
@@ -48,7 +48,7 @@ EMAIL: valdivit@uci.edu
     </nav>
 
     <div class="container">
-        <h1>Fuck</h1>
+        <h1>Text</h1>
     </div>
 
 
