--- a/tutorials.html
+++ b/tutorials.html
@@ -49,51 +49,11 @@ EMAIL: valdivit@uci.edu
 
     <div class="container">
 
-    <h1>Alcohol Poisoning</h1>
-    <h2>Symptoms of Alcohol Poisoning</h2>
-    <p>
-
-    Vomiting
-    <br/>
-    Passed Out
-    <br/>
-    Pale or Blue Skin
-    <br/>
-    Seizures
-    <br/>
-    Slow Breathing
-    <br/>
-    Irregular Breathing
-    <br/>
-    Body Temperature Begins to Drop(Hypothermia)
-    -- Add M.U.S.T. images--
-    </p>
-    <h2>Steps to Take When Person is Unconscious or Unresponsive</h2>
-    <p>
-      1. Call 911 for help!
-      <br/>
-      2. Stay with them and make sure they are laying on their side and not on their back.
-      <br/>
-      3.Begin the <strong>Bacchus Maneuver</strong>.
-      <br/>
-        - Raise the arm closes to you above their head.
-        <br/>
-        - Gently roll the person towards you, the head should rest next to the arm.
-        <br/>
-        - In order to maintain airway, tuck other hand under cheek.
-        <br/>
-        - Tuck in their knees to stabilize.
-        <br/>
-      4. Remain calm and firm if person is unresponsive to shaking and voice.
-      <br/>
-      5. Check if skin is cold, pale, or blue.
-      <br/>
-      6. Check if breathing has slowed eight or less breaths in a minute and if there are lapses in their breathing, more than ten seconds for every breath.
-      <br/>
-      7. Do not leave person alone and  do not let the person sleep it off. Be ready to perform CPR if needed.
-    </p>
-    <a href="https://www.youtube.com/watch?v=UqY7DZ46prA">Video</a>
-
+        <div>
+          <a href="alcohol.html">Alcohol Poisoning</a>
+          <a href="anxiety.html">Anxiety</a>
+          <a href="cpr.html">CPR</a>
+        </div>
 
     </div>
 
