--- a/about.html
+++ b/about.html
@@ -1,14 +1,71 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
 
+        <!--
+WRITTEN BY: Tyler Valdivieso
+EMAIL: valdivit@uci.edu
+-->
+
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href= "style.css" rel= "stylesheet" type= "text/css" >
+    <title>Healthful.info</title>
 </head>
+
 <body>
-  <h1>Built and Maintained by the Team at Healthful</h1>
-  <h2>Our Mission</h2>
-  <p>
-    Problem Statement
-    <br/>
-    <br/>
+    <nav class="navbar navbar-expand-sm sticky-top">
+    <ul class="navbar-nav">
+      <li class="nav-item navbar-brand">
+        <span class="navbar-brand">
+          <img src="healthful-logo%20copy.png" id="logo">
+        </span>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-auto" id="links">
+        <li class="nav-item active">
+        <a href="index.html" class="nav-link">
+          Emergency
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="tutorials.html" class="nav-link">
+          Tutorials
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          Research
+        </a>
+      </li>
+        <li class="nav-item">
+        <a href="about.html" class="nav-link">
+          About US
+        </a>
+      </li>
+    </ul>
+    </nav>
+
+    <div class="container">
+
+
+
+    </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+<h1>Built and Maintained by the Team at Healthful</h1>
+<h2>Our Mission</h2>
+<p>
+  Problem Statement
+  <br/>
+  <br/>
 The need to access medical reference information is mostly a low priority, but when emergencies happen, it becomes a high priority. Several emergencies arise among college students in which they are often unprepared or have many unanswered questions.  When this occurs, many students use Google to find medical reference information, and that is a process which is not always reliable or accessible. Often, the top Google search result is a promoted website that may provide you with misleading information. If an individual does find a source of information, it will most likely contain pop-up ads and privacy agreements that disrupt the flow of their search, and prevent a fast, accurate result. Another common source of medical reference information is YouTube, which provides many guided videos for emergency response actions such as CPR. However, YouTube runs a 30 second ad before playing the video, and for an individual in an emergency situation, these 30 seconds are critical. Furthermore, college students are faced with an uproar of stress, peer pressure, and a new environment which can inevitably affect their mental health and wellbeing. When faced with these circumstances, many young adults are lost- both internally and through the web.
 <br/>
 <br/>
@@ -17,37 +74,37 @@ Significance
 <br/>
 Although medical and wellness information should be common knowledge for every student, unfortunately the utilization of this information is not as easily accessed nor highly prioritized as it should be. There are common emergencies and/or health issues college students face, and in the instance of an emergency, waiting 15 seconds for an ad on Youtube or chaotically searching Google can be ultimately life-threatening. By creating a non-profit hub of credible knowledge that eliminates ads and integrates medical information in a clear, compact form could both aid people during emergencies while also allowing more community awareness among college campuses. This website could allow students to feel comfortable in their situation knowing they are not only ones facing these issues, but more profoundly, this hub of medical knowledge could aid students in both emergency and non-emergency circumstances.
 
-  </p>
-  <h3>Who we are</h3>
-  <p>
-    Rutaba Khan
-    <br/>
-    --Description--
-    <br/>
-    Nicolette Pamlenyi - CCO
-    <br/>
-    --Description--
-    <br/>
-    Sharon Chen
-    <br/>
-    --Description--
-    <br/>
-    Kristen DeVore - CEO
-    <br/>
-    --Description--
-    <br/>
-    Tyler Valdivieso
-    <br/>
-    --Description--
-    <br/>
-    James Ostergaard - CTO
-    <br/>
-    --Description--
-    <br/>
-  </p>
+</p>
+<h3>Who we are</h3>
+<p>
+  Rutaba Khan
+  <br/>
+  --Description--
+  <br/>
+  Nicolette Pamlenyi - CCO
+  <br/>
+  --Description--
+  <br/>
+  Sharon Chen
+  <br/>
+  --Description--
+  <br/>
+  Kristen DeVore - CEO
+  <br/>
+  --Description--
+  <br/>
+  Tyler Valdivieso
+  <br/>
+  --Description--
+  <br/>
+  James Ostergaard - CTO
+  <br/>
+  --Description--
+  <br/>
+</p>
 
-  <footer>
-      Irvine, CA
-  </footer>
-</body>
+<footer>
+    Irvine, CA
+</footer>
+
 </html>
