--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ EMAIL: valdivit@uci.edu
     <ul class="navbar-nav mr-auto" id="links">
         <li class="nav-item active">
         <a href="index.html" class="nav-link">
-          Emergency
+          Home
         </a>
       </li>
       <li class="nav-item">
@@ -35,13 +35,13 @@ EMAIL: valdivit@uci.edu
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
-          Research
+        <a href="resources.html" class="nav-link">
+          Resources
         </a>
       </li>
         <li class="nav-item">
         <a href="about.html" class="nav-link">
-          About US
+          About Us
         </a>
       </li>
     </ul>
@@ -59,47 +59,38 @@ EMAIL: valdivit@uci.edu
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
-<h1>Built and Maintained by the Team at Healthful</h1>
-<h2>Our Mission</h2>
 <p>
-  Problem Statement
-  <br/>
-  <br/>
-The need to access medical reference information is mostly a low priority, but when emergencies happen, it becomes a high priority. Several emergencies arise among college students in which they are often unprepared or have many unanswered questions.  When this occurs, many students use Google to find medical reference information, and that is a process which is not always reliable or accessible. Often, the top Google search result is a promoted website that may provide you with misleading information. If an individual does find a source of information, it will most likely contain pop-up ads and privacy agreements that disrupt the flow of their search, and prevent a fast, accurate result. Another common source of medical reference information is YouTube, which provides many guided videos for emergency response actions such as CPR. However, YouTube runs a 30 second ad before playing the video, and for an individual in an emergency situation, these 30 seconds are critical. Furthermore, college students are faced with an uproar of stress, peer pressure, and a new environment which can inevitably affect their mental health and wellbeing. When faced with these circumstances, many young adults are lost- both internally and through the web.
-<br/>
-<br/>
-Significance
-<br/>
-<br/>
-Although medical and wellness information should be common knowledge for every student, unfortunately the utilization of this information is not as easily accessed nor highly prioritized as it should be. There are common emergencies and/or health issues college students face, and in the instance of an emergency, waiting 15 seconds for an ad on Youtube or chaotically searching Google can be ultimately life-threatening. By creating a non-profit hub of credible knowledge that eliminates ads and integrates medical information in a clear, compact form could both aid people during emergencies while also allowing more community awareness among college campuses. This website could allow students to feel comfortable in their situation knowing they are not only ones facing these issues, but more profoundly, this hub of medical knowledge could aid students in both emergency and non-emergency circumstances.
-
+Our team is full of a variety of different individuals from all backgrounds, ranging from technical to medical. We are united by our passion and pursuit of availability of certified resources for college students, by college students. When we realized there was a need for a central hub of content containing verified information, we decided to approach the problem in a way we could help. Healthful.info is a website application in order to help students, specifically at UCI, find information necessary in case of a medical emergency. Through our non-profit, no ad website, we aim to integrate medical information clearly and create more community awareness among college campuses. We aim to help students who are in both emergency and non-emergency circumstances.
 </p>
 <h3>Who we are</h3>
 <p>
-  Rutaba Khan
+  Rutaba Khan - User and Content Researcher
   <br/>
-  --Description--
+  <img class="pic" src="./images/rutaba.jpg">
+  4th year, Informatics major
   <br/>
   Nicolette Pamlenyi - CCO
   <br/>
-  --Description--
+  <img class="pic" src="./images/nicolette.jpg">
+  4th year, Public Health Sciences major
   <br/>
-  Sharon Chen
+  Sharon Chen - User and Content Researcher
   <br/>
-  --Description--
+  <img class="pic" src="./images/sharon.jpg">
+  3rd year, Biological Sciences major
   <br/>
   Kristen DeVore - CEO
   <br/>
-  --Description--
+  <img class="pic" src="./images/kristen.jpeg">
+  4th year, Informatics major
   <br/>
-  Tyler Valdivieso
+  Tyler Valdivieso - Website Lead
   <br/>
-  --Description--
+  4th year, Informatics major
   <br/>
   James Ostergaard - CTO
   <br/>
-  --Description--
+  4th year, Informatics major
   <br/>
 </p>
 
