--- a/cpr.html
+++ b/cpr.html
@@ -26,7 +26,7 @@ EMAIL: valdivit@uci.edu
     <ul class="navbar-nav mr-auto" id="links">
         <li class="nav-item active">
         <a href="index.html" class="nav-link">
-          Emergency
+          Home
         </a>
       </li>
       <li class="nav-item">
@@ -35,13 +35,13 @@ EMAIL: valdivit@uci.edu
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
-          Research
+        <a href="resources.html" class="nav-link">
+          Resources
         </a>
       </li>
         <li class="nav-item">
         <a href="about.html" class="nav-link">
-          About US
+          About Us
         </a>
       </li>
     </ul>
@@ -75,10 +75,10 @@ EMAIL: valdivit@uci.edu
       <br/>
       3. Continue CPR steps. Keep performing cycles of chest compressions and breathing until the person exhibits signs of life, such as breathing, an AED becomes available, or EMS or a trained medical responder arrives on scene.
     </p>
-    <a href="https://www.youtube.com/watch?time_continue=1&v=a95DdvD9SsE">CPR Demonstration</a>
-    <a href="https://cpr.heart.org/AHAECC/CPRAndECC/AboutCPRECC/WhatIsCPR/UCM_499896_What-is-CPR.jsp">What is CPR</a>
-    <a href="https://www.redcross.org/take-a-class/cpr/performing-cpr/cpr-steps">CPR Steps</a>
-    <a href="https://www.redcross.org/take-a-class/cpr?latitude=33.6461&longitude=-117.8425">CPR Certification  </a>
+    <a class="link" href="https://www.youtube.com/watch?time_continue=1&v=a95DdvD9SsE">CPR Demonstration</a>
+    <a class="link" href="https://cpr.heart.org/AHAECC/CPRAndECC/AboutCPRECC/WhatIsCPR/UCM_499896_What-is-CPR.jsp">What is CPR</a>
+    <a class="link" href="https://www.redcross.org/take-a-class/cpr/performing-cpr/cpr-steps">CPR Steps</a>
+    <a class="link" href="https://www.redcross.org/take-a-class/cpr?latitude=33.6461&longitude=-117.8425">CPR Certification  </a>
 
 
     </div>
