--- a/resources.html
+++ b/resources.html
@@ -48,13 +48,15 @@ EMAIL: valdivit@uci.edu
     </nav>
 
     <div class="container">
-
-        <div>
-          <a class="link" href="alcohol.html">Alcohol Poisoning</a>
-          <a class="link" href="anxiety.html">Anxiety</a>
-          <a class="link" href="cpr.html">CPR</a>
-        </div>
-
+      <p>
+      <a class="link" href="https://counseling.uci.edu/">UCI Counseling Services</a>
+      <a class="link" href="http://emergency-rooms.find-near-me.info/" >Emergency Rooms Near Me</a>
+      <a class="link" href="https://counseling.uci.edu/resources/" >UCI Resources</a>
+      <a class="link" href="https://www.psychologytoday.com/us/therapists" >Find a Therapist/Counselor/Psychologist</a>
+      <a class="link" href="http://www.ulifeline.org/page/main/Home.html" >Anonymous Mental Health Resources for College Students</a>
+      <a class="link" href="tel:8059148949">Suicide Prevention Crisis Line</a>
+</p>
+<!--877-727-4747-->
     </div>
 
 
