--- a/alcohol.html
+++ b/alcohol.html
@@ -26,7 +26,7 @@ EMAIL: valdivit@uci.edu
     <ul class="navbar-nav mr-auto" id="links">
         <li class="nav-item active">
         <a href="index.html" class="nav-link">
-          Emergency
+          Home
         </a>
       </li>
       <li class="nav-item">
@@ -35,13 +35,13 @@ EMAIL: valdivit@uci.edu
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
-          Research
+        <a href="resources.html" class="nav-link">
+          Resources
         </a>
       </li>
         <li class="nav-item">
         <a href="about.html" class="nav-link">
-          About US
+          About Us
         </a>
       </li>
     </ul>
@@ -92,7 +92,7 @@ EMAIL: valdivit@uci.edu
       <br/>
       7. Do not leave person alone and  do not let the person sleep it off. Be ready to perform CPR if needed.
     </p>
-    <a href="https://www.youtube.com/watch?v=UqY7DZ46prA">Video</a>
+    <a class="link" href="https://www.youtube.com/watch?v=UqY7DZ46prA">Video</a>
 
 
     </div>
