--- a/anxiety.html
+++ b/anxiety.html
@@ -26,7 +26,7 @@ EMAIL: valdivit@uci.edu
     <ul class="navbar-nav mr-auto" id="links">
         <li class="nav-item active">
         <a href="index.html" class="nav-link">
-          Emergency
+          Home
         </a>
       </li>
       <li class="nav-item">
@@ -35,13 +35,13 @@ EMAIL: valdivit@uci.edu
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
-          Research
+        <a href="resources.html" class="nav-link">
+          Resources
         </a>
       </li>
         <li class="nav-item">
         <a href="about.html" class="nav-link">
-          About US
+          About Us
         </a>
       </li>
     </ul>
@@ -95,8 +95,8 @@ EMAIL: valdivit@uci.edu
       <br/>
       If these methods are not working, or you experience panic attacks often, visit the health center to speak with a therapist that can help you understand the triggers and solutions to your attacks.
     </p>
-    <a href="https://www.youtube.com/watch?v=V8wTyfKd-M0">Ways to Destress</a>
-    <a href="https://www.youtube.com/watch?v=vXZ5l7G6T2I">Breathing Technique during Panic Attack</a>
+    <a class="link" href="https://www.youtube.com/watch?v=V8wTyfKd-M0">Ways to Destress</a>
+    <a class="link" href="https://www.youtube.com/watch?v=vXZ5l7G6T2I">Breathing Technique during Panic Attack</a>
 
 
     </div>
