--- a/cpr.html
+++ b/cpr.html
@@ -29,11 +29,16 @@ EMAIL: valdivit@uci.edu
           Home
         </a>
       </li>
-      <li class="nav-item">
-        <a href="tutorials.html" class="nav-link">
-          Tutorials
-        </a>
-      </li>
+      <li class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="services" data-toggle="dropdown">
+                    Tutorials
+                </button>
+                <div class="dropdown-menu" aria-labelledby="services">
+                    <a class="dropdown-item" href="cpr.html">CPR</a>
+                    <a class="dropdown-item" href="alcohol.html">Alcohol Poisoning</a>
+                    <a class="dropdown-item" href="anxiety.html">Anxiety</a>
+                </div>
+        </li>
       <li class="nav-item">
         <a href="resources.html" class="nav-link">
           Resources
