--- a/about.html
+++ b/about.html
@@ -91,6 +91,7 @@ Our team is full of a variety of different individuals from all backgrounds, ran
   <br/>
   Tyler Valdivieso - Website Lead
   <br/>
+    <img class="pic" src="./images/tyler.jpeg">
   4th year, Informatics major
   <br/>
   James Ostergaard - CTO
