--- a/about.html
+++ b/about.html
@@ -98,6 +98,7 @@ Our team is full of a variety of different individuals from all backgrounds, ran
   <br/>
   4th year, Informatics major
   <br/>
+  <img class="pic" src="./images/james.jpg">
 </p>
 
 <footer>
