--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@ EMAIL: valdivit@uci.edu
       </li>
     </ul>
     </nav>
-
+    <div class="container">
+      <h1>Our Solution</h1>
+    </div>
+    <div class="solution">
+      <a href="./cpr.html"><img src=./images/cpr.jpg class="sol"></a>
+      <a href="./alcohol.html"><img src=./images/alcohol.jpg class="sol"></a>
+      <a href="./anxiety.html"><img src=./images/anxiety.jpg class="sol"></a
+    </div>
     <div class="container">
       <h1>Built and Maintained by the Team at Healthful</h1>
       <h2>Our Mission</h2>
@@ -68,6 +75,7 @@ EMAIL: valdivit@uci.edu
       Although medical and wellness information should be common knowledge for every student, unfortunately the utilization of this information is not as easily accessed nor highly prioritized as it should be. There are common emergencies and/or health issues college students face, and in the instance of an emergency, waiting 15 seconds for an ad on Youtube or chaotically searching Google can be ultimately life-threatening. By creating a non-profit hub of credible knowledge that eliminates ads and integrates medical information in a clear, compact form could both aid people during emergencies while also allowing more community awareness among college campuses. This website could allow students to feel comfortable in their situation knowing they are not only ones facing these issues, but more profoundly, this hub of medical knowledge could aid students in both emergency and non-emergency circumstances.
 
     </div>
+
 
 
 
