--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ EMAIL: valdivit@uci.edu
     </ul>
     </nav>
     <div class="container">
-      <h1>Our Solution</h1>
+      <h1 style="padding-top:25px;">Our Solution</h1>
     </div>
     <div class="solution">
       <a href="./cpr.html"><img src=./images/cpr.jpg class="sol"></a>
@@ -60,16 +60,10 @@ EMAIL: valdivit@uci.edu
       <a href="./anxiety.html"><img src=./images/anxiety.jpg class="sol"></a
     </div>
     <div class="container">
-      <h1>Built and Maintained by the Team at Healthful</h1>
-      <h2>Our Mission</h2>
+      <h1 style="padding-top:25px;">Built and Maintained by the Team at Healthful</h1>
+      <h2 style="padding-top:25px;">Our Mission</h2>
       <p>
-        Problem Statement
-        <br/>
-        <br/>
       The need to access medical reference information is mostly a low priority, but when emergencies happen, it becomes a high priority. Several emergencies arise among college students in which they are often unprepared or have many unanswered questions.  When this occurs, many students use Google to find medical reference information, and that is a process which is not always reliable or accessible. Often, the top Google search result is a promoted website that may provide you with misleading information. If an individual does find a source of information, it will most likely contain pop-up ads and privacy agreements that disrupt the flow of their search, and prevent a fast, accurate result. Another common source of medical reference information is YouTube, which provides many guided videos for emergency response actions such as CPR. However, YouTube runs a 30 second ad before playing the video, and for an individual in an emergency situation, these 30 seconds are critical. Furthermore, college students are faced with an uproar of stress, peer pressure, and a new environment which can inevitably affect their mental health and wellbeing. When faced with these circumstances, many young adults are lost- both internally and through the web.
-      <br/>
-      <br/>
-      Significance
       <br/>
       <br/>
       Although medical and wellness information should be common knowledge for every student, unfortunately the utilization of this information is not as easily accessed nor highly prioritized as it should be. There are common emergencies and/or health issues college students face, and in the instance of an emergency, waiting 15 seconds for an ad on Youtube or chaotically searching Google can be ultimately life-threatening. By creating a non-profit hub of credible knowledge that eliminates ads and integrates medical information in a clear, compact form could both aid people during emergencies while also allowing more community awareness among college campuses. This website could allow students to feel comfortable in their situation knowing they are not only ones facing these issues, but more profoundly, this hub of medical knowledge could aid students in both emergency and non-emergency circumstances.
