changed fonts and some other minor styling

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@ EMAIL: valdivit@uci.edu
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Noto+Sans|Roboto+Slab" rel="stylesheet">
     <link href= "style.css" rel= "stylesheet" type= "text/css" >
     <title>Healthful.info</title>
 </head>
@@ -106,7 +107,7 @@ EMAIL: valdivit@uci.edu
 </div>
     
 
-    <p style="padding-top: 50px; text-align:center">
+    <p style="padding-top: 50px; padding-bottom: 30px; text-align:center">
         Our team is full of a variety of different individuals from all backgrounds, ranging from technical to medical. We are united by our passion and pursuit of availability of certified resources for college students, by college students. When we realized there was a need for a central hub of content containing verified information, we decided to approach the problem in a way we could help. Healthful.info is a website application in order to help students, specifically at UCI, find information necessary in case of a medical emergency. Through our non-profit, no ad website, we aim to integrate medical information clearly and create more community awareness among college campuses. We aim to help students who are in both emergency and non-emergency circumstances.
     </p>
 
@@ -119,10 +120,5 @@ EMAIL: valdivit@uci.edu
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
-
-<footer>
-    Irvine, CA
-</footer>
 
 </html>
