--- a/alcohol.html
+++ b/alcohol.html
@@ -10,6 +10,7 @@ EMAIL: valdivit@uci.edu
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Noto+Sans|Roboto+Slab" rel="stylesheet">
     <link href= "style.css" rel= "stylesheet" type= "text/css" >
     <title>Healthful.info</title>
 </head>
@@ -54,8 +55,8 @@ EMAIL: valdivit@uci.edu
 
     <div class="container">
 
-    <h1>Alcohol Poisoning</h1>
-    <h2>Symptoms of Alcohol Poisoning</h2>
+    <h1 style="padding-top:25px;">Alcohol Poisoning</h1>
+    <h2 style="padding-top:15px;">Symptoms of Alcohol Poisoning</h2>
     <p>
 
     Vomiting
