--- a/anxiety.html
+++ b/anxiety.html
@@ -10,6 +10,7 @@ EMAIL: valdivit@uci.edu
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Noto+Sans|Roboto+Slab" rel="stylesheet">
     <link href= "style.css" rel= "stylesheet" type= "text/css" >
     <title>Healthful.info</title>
 </head>
@@ -54,7 +55,7 @@ EMAIL: valdivit@uci.edu
 
     <div class="container">
 
-    <h1>Aniety/Panic Attacks</h1>
+    <h1 style="padding-top:25px;">Aniety/Panic Attacks</h1>
     <p>
       Anxiety is <strong>not</strong> fiction. Anxiety is real. Panic is not made up. Owning, getting help to overcome, and learning to cope with your anxious feelings is critical to finally living your life and not simply existing.
     </p>
