--- a/cpr.html
+++ b/cpr.html
@@ -10,6 +10,7 @@ EMAIL: valdivit@uci.edu
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Noto+Sans|Roboto+Slab" rel="stylesheet">
     <link href= "style.css" rel= "stylesheet" type= "text/css" >
     <title>Healthful.info</title>
 </head>
@@ -54,7 +55,7 @@ EMAIL: valdivit@uci.edu
 
     <div class="container">
 
-    <h1>CPR</h1>
+    <h1 style="padding-top:25px;">CPR</h1>
     <h2>Steps to properly perform hands only CPR (According to cpr.heart.org)</h2>
     <p>
       1. Call 9-1-1 if possible
