--- a/resources.html
+++ b/resources.html
@@ -10,6 +10,7 @@ EMAIL: valdivit@uci.edu
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Noto+Sans|Roboto+Slab" rel="stylesheet">
     <link href= "style.css" rel= "stylesheet" type= "text/css" >
     <title>Healthful.info</title>
 </head>
@@ -52,7 +53,7 @@ EMAIL: valdivit@uci.edu
     </ul>
     </nav>
 
-    <div class="container">
+    <div class="container" style="padding-top:25px;">
         <a class="link" href="https://counseling.uci.edu/">UCI Counseling Services</a>
         <a class="link" href="http://emergency-rooms.find-near-me.info/" >Emergency Rooms Near Me</a>
         <a class="link" href="https://counseling.uci.edu/resources/" >UCI Resources</a>
