carousel in there

--- a/index.html
+++ b/index.html
@@ -52,7 +52,35 @@ EMAIL: valdivit@uci.edu
       </li>
     </ul>
     </nav>
+    
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" >
+    <div class="carousel-item active">
+        <a href="./cpr.html"><img class="d-block w-100" src=./images/cprbannernew.png alt="CPR"></a>
+    </div>
+    <div class="carousel-item">
+        <a href="./alcohol.html"><img class="d-block w-100" src=./images/alcbanneribeg.png alt="Alcohol Poisoning"></a>
+    </div>
+    <div class="carousel-item">
+        <a href="./anxiety.html"><img class="d-block w-100" src=./images/anxbannernew.png alt="Anxiety"></a>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
     <div class="container">
+<!--
       <h1 style="padding-top:25px;">Our Solution</h1>
     </div>
     <div class="solution">
@@ -60,6 +88,7 @@ EMAIL: valdivit@uci.edu
       <a href="./alcohol.html"><img src=./images/alcohol.jpg class="sol"></a>
       <a href="./anxiety.html"><img src=./images/anxiety.jpg class="sol"></a
     </div>
+-->
     <div class="container">
       <h1 style="padding-top:25px;">Built and Maintained by the Team at Healthful</h1>
       <h2 style="padding-top:25px;">Our Mission</h2>
